<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_settings"
        android:titleCondensed="@string/setting_unit"
        android:title="@string/setting_unit"
        android:icon="@android:drawable/ic_menu_preferences">
        <menu>
            <item android:id="@+id/unit_km"
                android:title="@string/unit_km" />
            <item android:id="@+id/unit_miles"
                android:title="@string/unit_miles" />
        </menu>
    </item>
    <item
        android:id="@id/menu_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"/>

    <item
        android:id="@+id/menu_about"
        android:titleCondensed="@string/about_menu_name"
        android:title="@string/about_menu_name"
        android:icon="@android:drawable/ic_menu_help">
    </item>
</menu>